--- a/style.css
+++ b/style.css
@@ -76,3 +76,24 @@ select {
   text-indent: 30px;
   line-height: 1.6;
 }
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #FF6347;
+  color: white;
+}
+
+.next {
+  background-color: #4CAF50;
+  color: white;
+}
