--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("6.png");
+  background: #8ac9ed;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
