--- a/style.css
+++ b/style.css
@@ -98,3 +98,13 @@ a:hover {
   background-color: #4CAF50;
   color: white;
 }
+
+input[type = submit] {
+            background-color: #4CAF50;
+            border: none;
+            font-size: 20px;
+            text-decoration: none;
+            display: inline-block;
+            color: white;
+            padding: 8px 16px;
+         }
